# fixed-point-rasterizer

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.DOS  Makefile.em  README.md
DOSVersion/: CDOSRenderer.cpp  main.cpp
SDLVersion/: CSDLRenderer.cpp  main.cpp
include/: CRenderer.h  LoadPNG.h  RasterizerCommon.h  RaycastCommon.h
src/: CRenderer.cpp  LoadPNG.cpp  RasterizerCommon.cpp  RaycastCommon.cpp
